Prepare search on filters lists

--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 
             <div class="filters">
                 <div class="filters-container" tabindex="0">
-                    <input type="search" class="filtersInput" name="ingredients" id="ingredients" placeholder="Ingrédients">
+                    <input type="search" class="filtersInput" name="ingredients" id="search-ingredients" placeholder="Ingrédients">
                     <ul class="filtersList" id="ingredients-list"></ul>
                 </div>
                 <div class="filters-container" tabindex="1">
-                    <input type="search" class="filtersInput" name="appareils" id="appareils" placeholder="Appareils">
+                    <input type="search" class="filtersInput" name="appareils" id="search-appareils" placeholder="Appareils">
                     <ul class="filtersList" id="appareils-list"></ul>
                 </div>
                 <div class="filters-container" tabindex="2">
-                    <input type="search" class="filtersInput" name="ustensiles" id="ustensiles" placeholder="Ustensiles">
+                    <input type="search" class="filtersInput" name="ustensiles" id="search-ustensiles" placeholder="Ustensiles">
                     <ul class="filtersList" id="ustensils-list"></ul>
                 </div>
             </div>
