section to div for w3c

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
             </div>
 
-            <section class="recipesGrid" id="recipesGrid"></section>
+            <div class="recipesGrid" id="recipesGrid"></div>
 
         </div>
     </body>
